--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 /* The entire black header */
 .header
 {
-    padding: 0 100px ;
+    padding: 0 100px;
     display: flex;
     flex-direction: column;
     color: #F9FAF8;
@@ -99,21 +99,28 @@ ul
 .title-container
 {
     display: flex;
-    gap: 57px;
-    padding: 100px 0;
-    flex-wrap: wrap;
+    padding: 100px 0 190px 0;
+    align-items: center;
     justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .title-image
 {
     display: flex;
     align-items: center;
+    justify-content: center;
+    min-width: 300px;
+    max-width: 500px;
 }
 
 .title-image img
 {
-    width: 500px;
+    width: 100%;
+    height: auto;
+    max-width: 500px;
     object-fit: contain;
 }
 
@@ -125,6 +132,8 @@ ul
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    min-width: 300px;
+    padding-right: 20px;
 }
 
 .learn-more 
@@ -136,6 +145,24 @@ ul
     border-radius: 3px;
     cursor: pointer;
     flex-grow: 0;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 900px) {
+    .title-container {
+        flex-direction: column;
+        text-align: center;
+        gap: 30px;
+    }
+    
+    .header-title {
+        align-items: center;
+        padding-right: 0;
+    }
+    
+    .header {
+        padding: 0 50px;
+    }
 }
 
 .info 
