--- a/style.css
+++ b/style.css
@@ -273,13 +273,13 @@ a
 
 .box-section
 {
-    padding: 10px ;
-    gap: 0.1em;
+    padding: 10px 5%;
+    gap: 1px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: center;
-    width: 75%;
+    width: 50%;
     height: 100px;
     background-color:#F92D2D ;
     color: white;
@@ -305,6 +305,7 @@ a
 .get a
 {
     color: #000000;
+    text-wrap: 0;
 }
 
 
